--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Santosh Gummidipundi",email = "santosh@santoshg.io"}
 ]
 readme = "README.md"
-requires-python = "3.12.2"
+requires-python = ">=3.12,<4.0"
 dependencies = [
     "beartype (>=0.20.2,<0.21.0)",
     "stravalib (>=2.3,<3.0)",
