--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "beartype (>=0.20.2,<0.21.0)",
     "stravalib (>=2.3,<3.0)",
     "firebase-admin (>=6.8.0,<7.0.0)",
-    "google-cloud-secret-manager (>=2.23.3,<3.0.0)"
+    "google-cloud-secret-manager (>=2.23.3,<3.0.0)",
+    "google-cloud-logging (>=3.12.1,<4.0.0)"
 ]
 
 
